# abc-delegation

./: LICENSE  README.md  pyproject.toml  setup.py
abc_delegation/: __init__.py  delegate.py  multi_delegate.py
delegate/: delegated.py
test/: test_delegate.py
